--- a/my-app/src/components/Banner.css
+++ b/my-app/src/components/Banner.css
@@ -2,7 +2,7 @@
 .banner {
   position: relative;
   height: 80vh;
-  background: url('https://images.unsplash.com/photo-1520975892441-38a1b8e8e8f4?auto=format&fit=crop&w=1400&q=80')
+  background: url('https://badhaihoevents.in/wp-content/uploads/2022/07/mandap-fi-1.jpeg')
     no-repeat center center/cover;
   display: flex;
   align-items: center;
